# Quake4SDK

./: .gitignore  Build.sh  CMakeLists.txt  Deploy.sh  DeployDebug.bat  DeployRelease.bat  README.md  StartClient.bat  StartClientServer.bat  StartGame.bat  StartGame.sh  StartServer.bat  game.vcxproj  game.vcxproj.filters  idlib.vcxproj  idlib.vcxproj.filters  q4sdk.sln
docs/: quake4Linux.md
game/gamesys/: Class.cpp  SysCmds.cpp
src/MayaImport/: maya_main.h
src/aas/: AASFile.h  AASFileManager.h
src/bse/: BSEInterface.h
src/cm/: CollisionModel.h
src/framework/: BuildDefines.h  CVarSystem.h  CmdSystem.h  Common.h  DeclPDA.h  DeclPlayerModel.h  File.h  FileSystem.h  UsercmdGen.h  declAF.h  declEntityDef.h  declLipSync.h  declManager.h  declMatType.h  declPlayback.h  declSkin.h  declTable.h  licensee.h
src/framework/async/: NetworkSystem.h
src/game/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  FreeView.cpp  FreeView.h  Game.h  GameEdit.cpp  GameEdit.h  Game_Debug.cpp  Game_Debug.h  Game_Log.cpp  Game_Log.h  Game_local.cpp  Game_local.h  Game_network.cpp  Healing_Station.cpp  Healing_Station.h  IK.cpp  IK.h  Icon.cpp  Icon.h  IconManager.cpp  IconManager.h  Instance.cpp  Instance.h  Item.cpp  Item.h  Light.cpp  Light.h  (+39 more)
src/game/ai/: AAS.cpp  AAS.h  AAS_Find.cpp  AAS_Find.h  AAS_debug.cpp  AAS_local.h  AAS_pathing.cpp  AAS_routing.cpp  AAS_tactical.cpp  AAS_tactical.h  AI.cpp  AI.h  AI_Actions.cpp  AI_Announcements.cpp  AI_Debug.cpp  AI_Manager.cpp  AI_Manager.h  AI_Medic.cpp  AI_Medic.h  AI_Move.cpp  AI_Move.h  AI_States.cpp  AI_Tactical.cpp  AI_Tactical.h  AI_Util.cpp  AI_Util.h  AI_events.cpp  AI_pathing.cpp  Monster_Berserker.cpp  Monster_BossBuddy.cpp  Monster_BossMakron.cpp  Monster_ConvoyGround.cpp  Monster_ConvoyHover.cpp  Monster_FailedTransfer.cpp  Monster_Fatty.cpp  Monster_Gladiator.cpp  Monster_Grunt.cpp  Monster_Gunner.cpp  Monster_Harvester.cpp  Monster_HarvesterDispersal.cpp  (+17 more)
src/game/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp  Anim_Testmodel.h
src/game/client/: ClientAFEntity.cpp  ClientAFEntity.h  ClientEffect.cpp  ClientEffect.h  ClientEntity.cpp  ClientEntity.h  ClientModel.cpp  ClientModel.h  ClientMoveable.cpp  ClientMoveable.h
src/game/gamesys/: Class.cpp  Class.h  DebugGraph.cpp  DebugGraph.h  Event.cpp  Event.h  NoGameTypeInfo.h  SaveGame.cpp  SaveGame.h  State.cpp  State.h  SysCmds.cpp  SysCmds.h  SysCvar.cpp  SysCvar.h
src/game/mp/: Buying.cpp  Buying.h  CTF.cpp  CTF.h  GameState.cpp  GameState.h  Tourney.cpp  Tourney.h  VoiceComms.cpp
src/game/physics/: Clip.cpp  Clip.h  Force.cpp  Force.h  Force_Constant.cpp  Force_Constant.h  Force_Drag.cpp  Force_Drag.h  Force_Field.cpp  Force_Field.h  (+28 more)
src/idlib/: AutoPtr.h  Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CmdArgs.cpp  CmdArgs.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  LexerFactory.cpp  LexerFactory.h  Lib.cpp  Lib.h  MapFile.h  Parser.cpp  Parser.h  Str.cpp  Str.h  TextCompiler.h  Timer.cpp  Timer.h  TimingCollection.cpp  TimingCollection.h  Token.cpp  Token.h  mapfile.cpp  precompiled.h  rvHeap.cpp  rvHeap.h  rvHeapArena.cpp  rvHeapArena.h  rvMemSys.cpp  rvMemSys.h
src/renderer/: Cinematic.h  Material.h  Model.h  ModelManager.h  RenderSystem.h  RenderWorld.h  glext.h  qgl.h  qgl_linked.h
src/sound/: sound.h
src/sys/: AutoVersion.h  sys_public.h
src/ui/: ListGUI.h  UserInterface.h
(+198 files in other folders)
